# ars

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  docker-entrypoint.sh  prek.toml
.github/workflows/: ci.yml  pages.yml
data/: latin-verbs.csv
data/latin/: latin-adjectives.csv  latin-names.csv  latin-nouns.csv  latin-prepositions.csv  latin-verbs.csv
data/latin/test/: text.txt
docs/: index.html
migrations/2026-05-28-191249-0000_create_latin_words/: down.sql  up.sql
migrations/2026-05-29-153220-0000_create_latin_verbs/: down.sql  up.sql
migrations/2026-06-02-165741-0000_create_latin_nouns/: down.sql  up.sql
migrations/2026-06-02-165741-0000_latin_nouns/: up.sql
migrations/2026-06-05-005620-0000_create_latin_adjectives/: down.sql  up.sql
migrations/2026-06-05-005620-0000_latin_adjectives/: up.sql
migrations/2026-06-07-153703-0000_create_latin_prepositions/: down.sql  up.sql
migrations/2026-06-07-153703-0000_latin_prepositions/: up.sql
migrations/2026-06-20-185057-0000_create_latin_lookup/: down.sql  up.sql
migrations/2026-06-21-155723-0000_alter_latin_lookup_path_to_integer/: down.sql  up.sql
migrations/2026-07-19-175530-0000_add_latin_lookup_form_index/: down.sql  up.sql
migrations/2026-07-19-175905-0000_add_unaccent_immutable_lookup_index/: down.sql  up.sql
migrations/2026-07-19-180817-0000_normalize_latin_lookup_forms/: down.sql  up.sql
ref/bibliography/: bibliography.bib
src/: lib.rs  schema.rs  tls.rs
src/api/: app.rs  middleware.rs  mod.rs  openapi.rs
src/api/latin/: mod.rs  nouns.rs  prepositions.rs  verbs.rs
src/grammar/latin/: mod.rs  path.rs  word.rs
(+17 files in other folders)
