[package]
name = "ars"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
csv = "1.4.0"
diesel = { version = "2.2.0", features = ["postgres", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1.23.2", features = ["serde"] }

[dev-dependencies]
prek = "0.3.4"
rstest = "0.26.1"
